options: Fix the spacing of level descriptions
Also identified in the UX review report:

Help text (which opens when you click on a (?)), still needs a bit of work on layout spacing, but it has
good advice about when to choose which level and how to stay protected.

--- a/common/options.css
+++ b/common/options.css
@@ -204,6 +204,10 @@ section#sect-devel {
 button.level {
 	min-width: 80%;
 }
+label.level_button_descr {
+	display: inline-block;
+	width: 80%;
+}
 
 #levels-storage-text {
 	width: 100%;
